--- a/envs/all_in_one.yaml
+++ b/envs/all_in_one.yaml
@@ -13,7 +13,7 @@ dependencies:
   - bioconda::htslib
   - bioconda::samtools
   - bioconda::star=2.7.11b
-  - bioconda::cutadapt=v4.9
+  - bioconda::cutadapt=4.9
   - conda-forge:pigz
   ## - conda-forge::r-base=4.2.2
   ## - bioconda::bioconductor-biocgenerics=0.44.0
