GTF formatting fixes, switch to downsampled for testing

--- a/config.yaml
+++ b/config.yaml
@@ -22,20 +22,32 @@ extraStarSoloArgs: ""
 ## full, absolute path where outputs will be generated at
 working_dir: /home/imallona/noname/bd/
 
-# whether from ensembl or gencode; formats differ slightly
-gtf_origin: 'ensembl' # or 'gencode'
+# # whether from ensembl or gencode; formats differ slightly
+# gtf_origin: 'ensembl' # or 'gencode'
 
 # genes annotation
-# https://ftp.ensembl.org/pub/release-112/gtf/homo_sapiens/Homo_sapiens.GRCh38.112.gtf.gz
-gtf: /home/gmoro/genome/Homo_sapiens.GRCh38.112.gtf
+# # https://ftp.ensembl.org/pub/release-112/gtf/homo_sapiens/Homo_sapiens.GRCh38.112.gtf.gz
+# gtf: /home/gmoro/genome/Homo_sapiens.GRCh38.112.gtf
 
 # genome seq
-# https://ftp.ensembl.org/pub/release-112/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa.gz
-genome: /home/gmoro/genome/Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa
+# # https://ftp.ensembl.org/pub/release-112/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa.gz
+# genome: /home/gmoro/genome/Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa
 
 # cDNAs seq
-# https://ftp.ensembl.org/pub/release-112/fasta/homo_sapiens/cdna/Homo_sapiens.GRCh38.cdna.all.fa.gz
-transcriptome: /home/gmoro/genome/Homo_sapiens.GRCh38.cdna.all.fa.gz 
+# # https://ftp.ensembl.org/pub/release-112/fasta/homo_sapiens/cdna/Homo_sapiens.GRCh38.cdna.all.fa.gz
+# transcriptome: /home/gmoro/genome/Homo_sapiens.GRCh38.cdna.all.fa.gz 
+
+
+gtf_origin: "gencode"
+# https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M35/gencode.vM35.primary_assembly.annotation.gtf.gz
+# caution uncompressed
+gtf: /home/imallona/src/noname/data/gencode.vM35.primary_assembly.annotation.gtf
+# https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M35/GRCm39.primary_assembly.genome.fa.gz
+# caution uncompressed
+genome: /home/imallona/src/noname/data/GRCm39.primary_assembly.genome.fa
+# https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M35/gencode.vM35.pc_transcripts.fa.gz
+# caution compressed
+transcriptome: /home/imallona/src/noname/data/gencode.vM35.pc_transcripts.fa.gz
 
 # cDNA read length minus 1
 sjdbOverhang: 70
@@ -43,7 +55,9 @@ sjdbOverhang: 70
 samples:
   - name: bd
     uses:
-      cb_umi_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R1.fastq.gz
-      cdna_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R2.fastq.gz
+      # cb_umi_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R1.fastq.gz
+      # cdna_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R2.fastq.gz
+      cb_umi_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R1_WTA_SMK.fastq.gz
+      cdna_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R2_WTA_SMK.fastq.gz
       whitelist: 384x3
       species: 'human'
