--- a/envs/all_in_one.yaml
+++ b/envs/all_in_one.yaml
@@ -16,7 +16,7 @@ dependencies:
   - bioconda::cutadapt=4.9
   - conda-forge:pigz
   - bioconda::salmon=1.10.3
-  - bioconda::alevin-fry=0.10.0
+  ## - bioconda::alevin-fry=0.10.0
   ## - conda-forge::r-base=4.2.2
   ## - bioconda::bioconductor-biocgenerics=0.44.0
   ## - conda-forge::r-biocmanager=1.30.22
