Count sampletags, get top cells

--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,8 @@ max_mem_mb: 20000 ## these are megabytes
 # downsampled: 50000000 # or 0
 
 ## cell filtering
-soloCellFilter: "EmptyDrops_CR" # None, TopCells, CellRanger2.2
+# soloCellFilter: "EmptyDrops_CR" # None, TopCells, CellRanger2.2
+soloCellFilter: "TopCells 500" # None, TopCells, CellRanger2.2
 
 ## multimappers
 soloMultiMappers: "Unique" # Uniform, Rescue , PropUnique, EM
