--- a/config.yaml
+++ b/config.yaml
@@ -62,3 +62,9 @@ samples:
       cdna_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R2_WTA_SMK.fastq.gz
       whitelist: 384x3
       species: 'human'
+  - name: only_sampletags
+    uses:
+      cb_umi_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/12SMK_S1_L432_R1_001.fastq.gz"
+      cdna_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/12SMK_S1_L432_R2_001.fastq.gz"
+      whitelist: 384x3
+      species: 'human'
