--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ max_mem_mb: 20000 ## these are megabytes
 
 ## cell filtering
 # soloCellFilter: "EmptyDrops_CR" # None, TopCells, CellRanger2.2
-soloCellFilter: "TopCells 3000" # None, TopCells, CellRanger2.2
+soloCellFilter: "CellRanger2.2" # None, TopCells, CellRanger2.2
 
 ## multimappers
 soloMultiMappers: "Unique" # Uniform, Rescue , PropUnique, EM
@@ -51,9 +51,14 @@ samples:
       whitelist: 384x3
       species: 'human'
 
-  # - name: only_sampletags
-  #   uses:
-  #     cb_umi_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/12SMK_S1_L432_R1_001.fastq.gz"
-  #     cdna_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/12SMK_S1_L432_R2_001.fastq.gz"
-  #     whitelist: 384x3
-  #     species: 'human'
+  # cd /home/imallona/tmp//bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/
+  # mkfifo r1.fq.gz
+  # mkfifo r2.fq.gz
+  # cat 12SMK_S1_L432_R1_001.fastq.gz 12WTA_S1_L432_R1_001.fastq.gz > r1.fq.gz &
+  # cat 12SMK_S1_L432_R2_001.fastq.gz 12WTA_S1_L432_R2_001.fastq.gz > r2.fq.gz &
+  - name: example_fifo
+    uses:
+      cb_umi_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r1.fq.gz"
+      cdna_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r2.fq.gz"
+      whitelist: 384x3
+      species: 'human'
