Remove non seekable fifo

--- a/config.yaml
+++ b/config.yaml
@@ -51,11 +51,14 @@ samples:
       whitelist: 384x3
       species: 'human'
 
+  # this doesn't work, the named pipe is not "seekable" for cutadapt
   # cd /home/imallona/tmp//bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/
   # mkfifo r1.fq.gz
   # mkfifo r2.fq.gz
   # cat 12SMK_S1_L432_R1_001.fastq.gz 12WTA_S1_L432_R1_001.fastq.gz > r1.fq.gz &
   # cat 12SMK_S1_L432_R2_001.fastq.gz 12WTA_S1_L432_R2_001.fastq.gz > r2.fq.gz &
+  # concatenate physically instead, with cat
+  
   - name: example_fifo
     uses:
       cb_umi_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r1.fq.gz"
