--- a/config.yaml
+++ b/config.yaml
@@ -12,13 +12,13 @@ max_mem_mb: 20000 ## these are megabytes
 
 ## cell filtering
 # soloCellFilter: "EmptyDrops_CR" # None, TopCells, CellRanger2.2
-soloCellFilter: "CellRanger2.2" # None, TopCells, CellRanger2.2
+soloCellFilter: "EmptyDrops_CR" # "CellRanger2.2" # None, TopCells, CellRanger2.2
 
 ## multimappers
 soloMultiMappers: "Unique" # Uniform, Rescue , PropUnique, EM
 
 ## extra STARsolo arguments
-extraStarSoloArgs: ""
+extraStarSoloArgs: "--soloStrand Unstranded"
 
 ## full, absolute path where outputs will be generated at
 working_dir: /home/imallona/noname/test_run/
@@ -35,8 +35,8 @@ genome: /home/imallona/src/noname/data/GRCm39.primary_assembly.genome.fa
 # caution compressed
 transcriptome: /home/imallona/src/noname/data/gencode.vM35.pc_transcripts.fa.gz
 
-# cDNA read length minus 1
-sjdbOverhang: 70
+# readlength is 71, but something is odd with cDNA reads - reducing
+sjdbOverhang: 50
 
 # aligner: ['starsolo']
 aligner: ['starsolo', 'kallisto', 'alevin']
