--- a/config.yaml
+++ b/config.yaml
@@ -18,16 +18,16 @@ soloCellFilter: "TopCells 100" # "CellRanger2.2" # None, TopCells, CellRanger2.2
 soloMultiMappers: "Unique" # Uniform, Rescue , PropUnique, EM
 
 ## extra STARsolo arguments
-extraStarSoloArgs: "--soloStrand Unstranded"
+extraStarSoloArgs: "--soloStrand Forward"
 
 ## full, absolute path where outputs will be generated at
 working_dir: /home/imallona/noname/test_run/
 
 
 gtf_origin: "gencode"
-# https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/gencode.v46.basic.annotation.gtf.gz
+# https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/gencode.v46.primary_assembly.annotation.gtf.gz
 # caution uncompressed
-gtf: /home/imallona/src/noname/data/gencode.v46.basic.annotation.gtf.gz
+gtf: /home/imallona/src/noname/data/gencode.v46.primary_assembly.annotation.gtf
 
 # https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/GRCh38.p14.genome.fa.gz
 # caution uncompressed
@@ -61,7 +61,7 @@ samples:
   # cat 12SMK_S1_L432_R2_001.fastq.gz 12WTA_S1_L432_R2_001.fastq.gz > r2.fq.gz &
   # concatenate physically instead, with cat
   
-  # - name: example_fifo
+  # - name: example_full
   #   uses:
   #     cb_umi_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r1.fq.gz"
   #     cdna_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r2.fq.gz"
