--- a/config.yaml
+++ b/config.yaml
@@ -5,14 +5,14 @@ STAR: STAR
 repo_path: '.'
 
 ## run limits
-nthreads: 30
+nthreads: 80
 max_mem_mb: 20000 ## these are megabytes
 
 # downsampled: 50000000 # or 0
 
 ## cell filtering
 # soloCellFilter: "EmptyDrops_CR" # None, TopCells, CellRanger2.2
-soloCellFilter: "TopCells 100" # "CellRanger2.2" # None, TopCells, CellRanger2.2
+soloCellFilter: "EmptyDrops_CR" # "CellRanger2.2" # None, TopCells, CellRanger2.2
 
 ## multimappers
 soloMultiMappers: "Unique" # Uniform, Rescue , PropUnique, EM
@@ -43,15 +43,15 @@ sjdbOverhang: 70
 # aligner: ['starsolo']
 aligner: ['starsolo', 'kallisto', 'alevin']
       
-samples:
-  - name: example_50M
-    uses:
-      # cb_umi_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R1.fastq.gz
-      # cdna_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R2.fastq.gz
-      cb_umi_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R1_WTA_SMK.fastq.gz
-      cdna_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R2_WTA_SMK.fastq.gz
-      whitelist: 384x3
-      species: 'human'
+# samples:
+#   - name: example_50M
+#     uses:
+#       ##cb_umi_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R1.fastq.gz
+#       ##cdna_fq: /home/gmoro/concatenated_bd_demo/WTA_SMK_R2.fastq.gz
+#       cb_umi_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R1_WTA_SMK.fastq.gz
+#       cdna_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R2_WTA_SMK.fastq.gz
+#       whitelist: 384x3
+#       species: 'human'
 
   # this doesn't work, the named pipe is not "seekable" for cutadapt
   # cd /home/imallona/tmp//bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/
@@ -60,10 +60,17 @@ samples:
   # cat 12SMK_S1_L432_R1_001.fastq.gz 12WTA_S1_L432_R1_001.fastq.gz > r1.fq.gz &
   # cat 12SMK_S1_L432_R2_001.fastq.gz 12WTA_S1_L432_R2_001.fastq.gz > r2.fq.gz &
   # concatenate physically instead, with cat
-  
-  # - name: example_full
+
+samples:
+  - name: example_full
+    uses:
+      cb_umi_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r1.fq.gz"
+      cdna_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r2.fq.gz"
+      whitelist: 384x3
+      species: 'human'
+  # - name: example_50M
   #   uses:
-  #     cb_umi_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r1.fq.gz"
-  #     cdna_fq: "/home/imallona/tmp/bdrhapsody_demo/12WTA-ABC-SMK-EB-5kJRT/r2.fq.gz"
+  #     cb_umi_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R1_WTA_SMK.fastq.gz
+  #     cdna_fq: /home/gmoro/concatenated_bd_demo/combined_50M_R2_WTA_SMK.fastq.gz
   #     whitelist: 384x3
   #     species: 'human'
